--- a/index.html
+++ b/index.html
@@ -1,111 +1,126 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agricultura Sustentável</title>
+    <title>Agricultura Familiar</title>
     <style>
+        /* Estilos CSS básicos */
         body {
             font-family: Arial, sans-serif;
+            line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #000000;
+            background-color: #f9f9f9;
         }
         header {
-            background: #0b0a0cd6;
+            background-color: #4CAF50;
             color: #ffffff;
-            padding: 10px 0;
             text-align: center;
+            padding: 05px 0;
         }
         nav {
-            display: flex;
-            justify-content: center;
-            background: #000000;
+            background-color: #333;
+            color: #ffffff;
+            text-align: center;
+            padding: 10px 0;
         }
         nav a {
-            color: #ffffff;
-            padding: 14px 20px;
             text-decoration: none;
-            text-align: center;
+            color: #ffffff;
+            padding: 10px 20px;
+            margin: 0 5px;
+            font-weight: bold;
         }
         nav a:hover {
-            background: #aba6a6;
+            background-color: #555;
         }
         .container {
-            padding: 20px;
-            max-width: 1200px;
+            width: 80%;
             margin: auto;
-        }
-        h1, h2 {
-            color: #000dff;
+            overflow: hidden;
         }
         section {
-            margin-bottom: 20px;
-            padding: 20px;
-            background: #dedede;
-            border-radius: 8px;
+            padding: 20px 0;
+            border-bottom: 1px solid #ccc;
+        }
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            margin-top: 20px;
+        }
+        .gallery img {
+            width: 30%;
+            margin-bottom: 10px;
+            border-radius: 5px;
         }
         footer {
-            background: #5b5b5b;
-            color: #fff;
+            background-color: #333;
+            color: #ffffff;
             text-align: center;
-            padding: 10px;
-            position: fixed;
-            width: 100%;
+            padding: 10px 0;
+            position: absolute;
             bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Agricultura Sustentável</h1>
-        <img src="img/Capa-Blog-42.webp">
+        <img src="imagens/agricultura_familiar.png">
+        <p>Criando oportunidades através da Agricultura Familiar</p>
     </header>
-
-    <nav>
-        <a href="#sobre">Sobre</a>
-        <a href="#beneficios">Benefícios</a>
-        <a href="#praticas">Práticas</a>
-        <a href="#Tipos">Tipos</a>
-    </nav>
-
+    <a href='https://youtu.be/xnG0JEsb4hk?si=o2lB8Qf0TJ_RGsCc'><button>Video</button></a>
     <div class="container">
         <section id="sobre">
-            <h2>Sobre a Agricultura Sustentável</h2>
-            <p>A agricultura sustentável é um método de cultivo que busca atender às necessidades atuais sem comprometer a capacidade das futuras gerações de atender às suas próprias necessidades. Envolve práticas que preservam os recursos naturais, promovem a biodiversidade e garantem a saúde do solo.</p>
+            <h2>Sobre a Agricultura</h2>
+            <p>A agricultura familiar é aquela desenvolvida por pequenos agricultores, geralmente em áreas rurais, que utilizam práticas sustentáveis e têm um papel fundamental no abastecimento de alimentos e na preservação ambiental.</p>
+        </section>
+
+        <section id="Agricultura no Brasil">
+            <h2>Agricultura Familiar no Brasil</h2>
+            <p>No Brasil, a agricultura familiar ocupa uma extensão de área de 80,9 milhões de hectares, o que representa 23% da área total dos estabelecimentos agropecuários brasileiros. O levantamento do Censo Agropecuário de 2017, realizado em mais de 5 milhões de propriedades rurais de todo o Brasil, aponta que 77% dos estabelecimentos agrícolas do País foram classificados como de agricultura familiar. Ainda segundo as estatísticas, a agricultura familiar empregava mais de 10 milhões de pessoas em setembro de 2017, o que corresponde a 67% do total de pessoas ocupadas na agropecuária, sendo responsável pela renda de 40% da população economicamente ativa. O setor se destaca como produtor de alimentos, em especial pela produção de milho, mandioca, pecuária leiteira, gado de corte, ovinos, caprinos, olerícolas, feijão, cana, arroz, suínos, aves, café, trigo, mamona, fruticulturas e hortaliças. Nas culturas permanentes, o segmento responde por 48% do valor da produção de café e banana; nas culturas temporárias, por 80% do valor de produção da mandioca, 69% do abacaxi e 42% da produção do feijão, entre outras. De acordo com o Censo Agropecuário citado, a agricultura familiar é a base da economia de 90% dos municípios brasileiros com até 20 mil habitantes.</p>
+            <ul>
+
+        <section id="praticas">
+            <h2>Práticas para Agricultura Familiar</h2>
+                <li>Uso de fertilizantes orgânicos</li>
+                <li>Rotação de culturas</li>
+                <li>Conservação da biodiversidade</li>
+                <li>Uso eficiente de recursos hídricos</li>
+            </ul>
         </section>
 
         <section id="beneficios">
-            <h2>Benefícios</h2>
+            <h2>Benefícios da Agricultura Familiar</h2>
+            <p>Os principais benefícios da agricultura familiar incluem:</p>
             <ul>
-                <li><strong>Preservação Ambiental:</strong> Reduz o impacto ambiental e melhora a saúde dos ecossistemas.</li>
-                <li><strong>Saúde do Solo:</strong> Mantém a fertilidade e a estrutura do solo a longo prazo.</li>
-                <li><strong>Biodiversidade:</strong> Promove a diversidade de espécies e a resistência a pragas.</li>
-                <li><strong>Segurança Alimentar:</strong> Garante a produção de alimentos de maneira ética e segura.</li>
+                <li>Fortalecimento da economia local</li>
+                <li>Promoção da segurança alimentar</li>
+                <li>Preservação da cultura e tradições locais</li>
+                <li>Redução do impacto ambiental</li>
             </ul>
         </section>
-        <section id="praticas">
-            <h2>Práticas de Agricultura Sustentável</h2>
-            <p>Algumas práticas recomendadas para uma agricultura sustentável incluem:</p>
+
+        <section id="Objetivos">
+            <h2>Principais objetivos</h2>
+            <p>Os principais objetivos da Agricultura Familiar</p>
             <ul>
-                <li><strong>Rotação de Culturas:</strong> Alternar os tipos de culturas para evitar a exaustão do solo.</li>
-                <li><strong>Compostagem:</strong> Utilizar resíduos orgânicos para enriquecer o solo.</li>
-                <li><strong>Uso Consciente da Água:</strong> Implementar técnicas de irrigação eficiente e de captação de água da chuva.</li>
-                <li><strong>Controle Biológico de Pragas:</strong> Usar predadores naturais e outros métodos não químicos para controlar pragas.</li>
+                <li>Diversificação da produção alimentar</li>
+                <li>Produção em pequena escala</li>
+                <li>Baixo impacto ambiental</li>
+                <li>Uso de técnicas tradicionais de cultivo</li>
             </ul>
         </section>
-        <section id="Tipos">
-            <h2>Tipos de agricultura existentes</h2>
-            <ul>
-                <li> Agricultura moderna
-                <li>Agricultura intensiva</li>
-                <li>Agricultura extensiva</li>
-                <li>Agricultura patronal</li>
-                <li>Agricultura familiar</li> 
-                </ul>
+        <section id="galeria">
+            <h2>Galeria de Imagens</h2>
+            <div class="gallery">
+                <img src="imagens/WhatsApp Image 2024-08-08 at 09.11.38.jpeg" alt="Imagem Agricultura Familiar">
+                <img src="imagens/WhatsApp Image 2024-08-08 at 09.11.59.jpeg" alt="Imagem Agricultura Familiar">
+            </div>
         </section>
-    <footer>
-        <p>&copy; Rafael Medeiros. Todos os direitos reservados.</p>
-    </footer>
-</body>
-</html>
+<section id="contato">
+<h2>Caso haja alguma duvida entre em contato com: rafael.marcilio@escola.pr.gov.br
+</h2>
+</section>
